--- a/ui/package.json
+++ b/ui/package.json
@@ -10,6 +10,7 @@
     "@mui/icons-material": "^5.0.4",
     "@mui/material": "^5.0.4",
     "@mui/system": "^5.0.4",
+    "@mui/x-data-grid": "^5.0.0-beta.5",
     "cra-template": "1.1.2",
     "package.json": "^2.0.1",
     "react": "^17.0.2",
